--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.14.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
